[package]
name = "bls"
version = "0.1.0"
license = "GPL-3.0"
authors = ["driftluo <driftluo@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1"

[dependencies]
tide = "0.6"
async-std = { version = "1.0.1", features = ["unstable", "attributes"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1"
faster-hex = "0.4"
futures = "0.3"
